Fix settings container alignment

--- a/src/app/components/containers/settings-container/settings-container.component.scss
+++ b/src/app/components/containers/settings-container/settings-container.component.scss
@@ -2,4 +2,5 @@
   z-index: 2;
   display: flex;
   margin: 0.75rem 0 1rem 1rem;
+  align-self: flex-start;
 }
